Closed Bug 200568 Opened 21 years ago Closed 21 years ago

OBJECT tag plugins render in full-page mode

Categories

(Core Graveyard :: Plug-ins, defect)

defect
Not set
normal

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: peterlubczynski-bugs, Assigned: peterlubczynski-bugs)

Details

Attachments

(1 file, 1 obsolete file)

This is a regression from bug 90256: when using an OBJECT tag, the plugin
renders in full-page mode. This screws up some sites like Macromedia.com when
trying to download a plugin. This reason for this is because
nsObjectFrame::IsSupportedDocument returns TRUE for embedded plugins because
it's able to find the full-page plugin content viewer entry in the catagory manager.
Attached file testcase
Attached patch patch v.1 (obsolete) — Splinter Review
Attachment #119377 - Flags: superreview?(bzbarsky)
Attachment #119377 - Flags: review?(jkeiser)
Comment on attachment 119377 [details] [diff] [review]
patch v.1

>+    // If we have a content viewer entry in the catagory manager for this mime type

"category"

>+    // and it's not the full-page plugin one, return PR_TRUE to act like an IFRAME.
>+    if (NS_SUCCEEDED(rv) && 
>+        value && 
>+        *value && 
>+        (value.Length() > 0) && 
>+        !value.Equals("@mozilla.org/content/plugin/document-loader-factory;1"))

What's the purpose of those middle three tests?  They're already performed by
the Equals() implementation.... (not to mention that those three tests are
completely redundant).

sr=me with those changes, assuming this fixes the bug (I don't quite understand
what the bug is and how this would fix it, to be truthful...)
Attachment #119377 - Flags: superreview?(bzbarsky) → superreview+
yeah, I replaced those middle checks with an !IsEmpty() because I don't want to
return true if I didn't get anything back from the catagory manager. I got the
verbal r= from jkeiser and I've checked in the patch to the trunk, marking FIXED.

I don't think this bug was caused by bug 90256 anymore as we were already using
the catagory manager for full-page plugins then. I think this was a regression
from bug 97324.
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Attachment #119377 - Attachment is obsolete: true
Attachment #119377 - Flags: review?(jkeiser)
Marking Verified Fixed

Based on verifying the attached reviewed patch and contents of lxr here:
http://lxr.mozilla.org/seamonkey/source/layout/html/base/src/nsObjectFrame.cpp#550

Change was checked in and matches patch attached to this bug.
Status: RESOLVED → VERIFIED
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: