Fixing bug 200568, OBJECT tag renders plugins and full-page, r=jkeiser, sr=bz